--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
+    "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
+    "connect-history-api-fallback": "^1.1.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-notify": "^2.2.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
-    "reactify": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1"
   },
   "dependencies": {
     "history": "^1.17.0",
