--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "gulp-notify": "^2.2.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "history": "^1.17.0",
+    "jquery": "^2.1.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   },
-  "dependencies": {
-    "history": "^1.17.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-router": "^1.0.2"
-  }
+  "dependencies": {}
 }
