--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^1.17.0",
     "jquery": "^2.1.4",
     "react": "^0.14.3",
+    "react-checkbox-group": "^0.3.1",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
